# BranchedGP

./: .flake8  .gitignore  .isort.cfg  Makefile  README.md  pyproject.toml  setup.py  test_requirements.txt
.github/workflows/: main.yml
BranchedGP/: BranchingTree.py  FitBranchingModel.py  VBHelperFunctions.py  assigngp_dense.py  assigngp_denseSparse.py  branch_kernParamGPflow.py  pZ_construction_singleBP.py
testing/: testAssignment.py  testKL.py  testKernel.py  testObjective.py  testSamplingAndPlotting.py  testSparseToFullModel.py  test_notebooks.py  testpZ_construct.py
