[tool.poetry]
name = "BranchedGP"
version = "0.1.0"
description = "Branching Gaussian process"
authors = ["Alexis Boukouvalas <alexis.boukouvalas@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.*"
tensorflow = "^1.15.3"
gpflow = "^1.5.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
nose-timer = "^1.0.0"
taskipy = "^1.2.1"
mypy = "^0.782"
flake8 = "^3.8.3"
black = "^19.10b0"
isort = "^4.3.21"

[tool.taskipy.tasks]
run_jupyter = "jupyter notebook"
all_checks = "task test && task check_format && task static_checks"
test = "nosetests --with-timer"
static_checks = "task mypy && task lint"
mypy = "mypy --ignore-missing-imports BranchedGP"
lint = "flake8 --max-line-length 120 BranchedGP"
format = "task black && task isort"
check_format = "task black --check && task isort --diff"
black = "black BranchedGP"
isort = "isort --atomic BranchedGP/**/*.py"

[tool.black]
line-length = 120
target-version = ['py37']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"